crates/runtime/tests/search/snapshots/integration_models__search__no_acceleration-no_vector_engine-dataset-multi_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "data": {
        "question": "How many multiples of 4 are there between 1 and 30? List them and count the total."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "The multiples of 4 between 1 and 30 are 4, 8, 12, 16, 20, 24, and 28. Counting these, there are $\\boxed{7}$ multiples."
      },
      "primary_key": {
        "id": 468
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "Find the number of ways a judge can award first, second, and third places in a contest with 18 contestants."
      },
      "primary_key": {
        "id": 361
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": "How many groups of 2 are in 14?"
      },
      "primary_key": {
        "id": 462
      },
      "score": 0.01
    },
    {
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
      },
      "primary_key": {
        "id": 1277
      },
      "score": 0.01
    }
  ]
}
